--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@ai-sdk/anthropic": "^0.0.48",
     "@ai-sdk/openai": "^0.0.54",
     "@deepgram/sdk": "^3.6.0",
-    "ai": "^3.3.20",
+    "ai": "^4.1.16",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.0",
     "framer-motion": "^11.3.31",
@@ -20,10 +21,13 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1",
-    "replicate": "^0.32.0"
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.0",
+    "replicate": "^0.32.1",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
